# BSD-Tools

./: Makefile  README.md  meson.build
Headers/: coreutils.h  grp.h  info.h  miscutils.h  pwd.h  regex.h  signal_table.h  stdio.h  stdlib.h  string.h  time.h  (+3 more)
Source/archive/compress/: compress.c  meson.build  zopen.c
Source/archive/gzip/: gzexe  gzip.c  meson.build  unlz.c  unxz.c  zdiff  zforce  zgrep  zmore  znew  zuncompress.c
Source/archive/pax/: ar_io.c  ar_subs.c  buf_subs.c  cpio.c  extern.h  file_subs.c  ftree.c  gen_subs.c  getid.c  getoldopt.c  meson.build  misc.c  mtree.h  mtree_extern.h  options.c  pack_dev.c  pack_dev.h  pat_rep.c  pax.c  pax.h  sel_subs.c  spec.c  tables.c  tar.c  tty_subs.c
Source/bc/: bc.c  bc.h  bcode.c  dc.c  dc_extern.h  extern.h  inout.c  main.c  mem.c  meson.build  scan.c  stack.c  tty.c
Source/bsdutils/hexdump/: meson.build  parse.c
Source/coreutils/: meson.build
Source/coreutils/arch/: arch.1  arch.c  meson.build
Source/coreutils/base64/: meson.build
Source/coreutils/basename/: meson.build
Source/coreutils/cat/: meson.build
Source/coreutils/chmod/: chmod.c  meson.build
Source/coreutils/chown/: meson.build
Source/coreutils/chroot/: chroot.c  meson.build
Source/coreutils/cksum/: cksum.c  crc.c  crc_extern.h  extern.h  meson.build
Source/coreutils/comm/: meson.build
Source/coreutils/cp/: cp.c  extern.h  meson.build  utils.c
Source/coreutils/csplit/: meson.build
Source/coreutils/cut/: meson.build  x_cut.c
Source/coreutils/date/: meson.build
Source/coreutils/dd/: args.c  conv.c  dd.c  dd.h  extern.h  meson.build  misc.c  position.c
Source/coreutils/df/: df.c  meson.build
Source/coreutils/dirname/: meson.build
Source/coreutils/du/: du.c  meson.build
Source/coreutils/echo/: echo.c  meson.build
Source/coreutils/env/: meson.build
Source/coreutils/expand/: meson.build
Source/coreutils/expr/: expr.c  meson.build
Source/coreutils/factor/: factor.1  factor.c  meson.build  pr_tbl.c  primes.h
Source/coreutils/false/: meson.build
Source/coreutils/fmt/: buffer.h  meson.build
Source/coreutils/fold/: fold.c  meson.build
Source/coreutils/head/: meson.build
Source/coreutils/hostid/: hostid.1  hostid.c  meson.build
Source/coreutils/hostname/: meson.build
Source/coreutils/id/: id.c  meson.build
Source/coreutils/join/: meson.build
Source/coreutils/link/: meson.build
Source/coreutils/ln/: meson.build
Source/coreutils/logname/: meson.build
Source/coreutils/ls/: ls.c  ls.h  meson.build  print.c  util.c
Source/coreutils/mkdir/: meson.build
Source/coreutils/mkfifo/: meson.build
Source/coreutils/mknod/: meson.build  mknod.c
Source/coreutils/mktemp/: meson.build
Source/coreutils/mv/: meson.build
Source/coreutils/nice/: meson.build  nice.c
Source/coreutils/nl/: meson.build  nl.c
Source/coreutils/nohup/: meson.build  nohup.c
Source/coreutils/nproc/: meson.build  nproc.1  nproc.c
Source/coreutils/paste/: meson.build
Source/coreutils/pathchk/: meson.build  pathchk.c
Source/coreutils/pr/: egetopt.c  meson.build  pr.c
Source/coreutils/printenv/: meson.build
Source/coreutils/printf/: meson.build
Source/coreutils/pwd/: meson.build  pwd.c
Source/coreutils/realpath/: meson.build
Source/coreutils/rm/: meson.build  rm.c
Source/coreutils/rmdir/: meson.build
Source/coreutils/seq/: meson.build  seq.c
Source/coreutils/sleep/: meson.build  sleep.c
Source/coreutils/sort/: append.c  fields.c  files.c  fsort.c  init.c  meson.build  msort.c  radix_sort.c  sort.c  sort.h  tmp.c
Source/coreutils/split/: meson.build  split.c
Source/coreutils/stat/: meson.build
Source/coreutils/stty/: cchar.c  extern.h  gfmt.c  key.c  meson.build  print.c  stty.h
Source/coreutils/sync/: meson.build
Source/coreutils/tail/: extern.h  forward.c  meson.build  read.c
Source/coreutils/tee/: meson.build
Source/coreutils/test/: meson.build  test.c
Source/coreutils/timeout/: meson.build  timeout  timeout.c  timeout.d
Source/coreutils/touch/: meson.build  touch.c
Source/coreutils/tr/: meson.build
Source/coreutils/true/: meson.build
Source/coreutils/truncate/: meson.build  truncate.1  truncate.c
Source/coreutils/tsort/: meson.build  tsort.c
Source/coreutils/tty/: meson.build
Source/coreutils/uname/: meson.build  uname.c
Source/coreutils/unexpand/: meson.build  unexpand.c
Source/coreutils/uniq/: meson.build
Source/coreutils/unlink/: meson.build
Source/coreutils/users/: meson.build  users.c  utmpentry.c
Source/coreutils/wc/: meson.build
Source/coreutils/who/: meson.build  utmpentry.c  who.c
Source/coreutils/xinstall/: extern.h  getid.c  meson.build  xinstall.c
Source/coreutils/yes/: meson.build
Source/grep/: fastgrep.c  grep.c  meson.build  util.c
Source/ksh/: c_ksh.c  edit.c  emacs.c  ksh.1  main.c  meson.build  misc.c  path.c  shf.c  siglist.in  version.c
Source/m4/: eval.c  expr.c  extern.h  gnum4.c  look.c  main.c  meson.build  misc.c  ohash.c  ohash.h  parser.c  parser.h  tokenizer.c  trace.c
Source/miscutils/: meson.build
Source/miscutils/apply/: apply.c  meson.build
Source/miscutils/asa/: asa.c  meson.build
Source/miscutils/banner/: banner.c  chset.c  meson.build
Source/miscutils/biff/: biff.c  meson.build
Source/miscutils/c11/: meson.build
Source/miscutils/c17/: meson.build
Source/miscutils/c89/: meson.build
Source/miscutils/c99/: meson.build
Source/miscutils/cal/: cal.c  meson.build
Source/miscutils/calendar/: calendar.c  meson.build
Source/miscutils/column/: column.c  meson.build
Source/miscutils/domainname/: domainname.c  meson.build
Source/miscutils/gencat/: gencat.c  meson.build
Source/miscutils/getconf/: getconf.c  meson.build
Source/miscutils/jot/: meson.build
Source/miscutils/primes/: meson.build  pattern.c  pr_tbl.c
Source/miscutils/progress/: meson.build  progress.c  progressbar.c
Source/miscutils/rs/: meson.build  rs.c
Source/miscutils/time/: meson.build  time.c  xtime.c
Source/miscutils/unvis/: meson.build
Source/miscutils/vis/: meson.build
Source/util-linux/hexdump/: display.c  meson.build
(+325 files in other folders)
