executable(
	'pax',
	'ar_io.c',
	'ar_subs.c',
	'buf_subs.c',
	'cpio.c',
	'ftree.c',
	'gen_subs.c',
	'getid.c',
	'file_subs.c',
	'getoldopt.c',
	'misc.c',
	'options.c',
	'pack_dev.c',
	'pat_rep.c',
	'pax.c',
	'sel_subs.c',
	'spec.c',
	'tables.c',
	'tar.c',
	'tty_subs.c',
	include_directories : incdir,
	c_args : [ '-Wno-unused-function' ],
	link_with : libcompat,
	install : true,
	install_dir : get_option('bindir')
)
